forgot a comment lol

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     Alex Basinski
     Rocket Patrol Remake / Reimagine
     April 21, 2021
-    Hours spent on project: 
+    Hours spent on project: ~10
 -->
 
 <!DOCTYPE html>
